# example-pdal-plugin

./: .gitignore  CMakeLists.txt  README.md  library.cpp  library.h  test.sh
filter/: CMakeLists.txt  Filter.cpp  MyFilter.cpp  MyFilter.h
reader/: CMakeLists.txt  MyReader.cpp  MyReader.h  Reader.cpp
writer/: CMakeLists.txt  MyWriter.cpp  MyWriter.h  Writer.cpp  Writer.h
